# geojson-shave

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
geojson_shave/: __init__.py  geojson_shave.py
tests/: __init__.py  test_logic.py
