[metadata]
name = geojson-shave
version = 0.1.0
author = Ben Nour
author_email = hello@ben-nour.com
description = A command-line tool for reducing the size of GeoJSON files.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ben-n93/geojson-shave
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
install_requires =
    alive-progress
    humanize

[options.entry_points]
console_scripts =
    geojson-shave = geojson_shave.geojson_shave:main
